<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello?</string>
    <string name="app_name">Do You Speak?</string>
    <string name="localization">Lokalizacja</string>
    <string name="expressions">Zwroty</string>
    <string name="my_list">Moja Lista</string>
    <string name="reminder">Przypomnienia</string>
    <string name="add_expression">Dodaj Zwrot</string>
    <string name="home">Strona Główna</string>
    <string name="record">Nagrywanie</string>
    <string name="details">Szczegóły</string>
    <string name="star_on"></string>
    <string name="star_off"></string>
    <string name="my_localization">Moja lokalizacja</string>
    <string name="choose_localization">Wpisz lokalizację</string>
    <string name="writing_localization">Kraj, region</string>
    <string name="expressionCategory">Kategoria</string>
    <string name="record_text">Nagraj Siebie</string>
    <string name="record_play_text">Sprawdź nagranie</string>
    <string name="choose_category_text">Wybierz kategorię</string>
    <string name="accept_button">Zaakceptuj</string>
    <string name="next_text">Następny</string>
    <string name="previous_text">Poprzedni</string>
    <string name="expression_text">Mogę zapłacić kartą?</string>
    <string name="listen_text">Posłuchaj</string>
    <string name="record_history_text">Odtwórz Swoje nagrania:</string>
    <string name="test_var">lalalala44444</string>
    <string name="your_localization">Poznań, Polska</string>
    <string name="choose_languages">Wybierz język</string>
    <string name="date_setter_text">Data</string>
    <string name="time_setter_text">Godzina</string>
    <string name="setting_buttun_text">Ustaw</string>
    <string name="cancel_button_text">Anuluj</string>
    <string name="repeat_text">Powtórz:</string>
    <string name="repeat_once_rb">Zdarzenie jednorazowe</string>
    <string name="repeat_day_rb">Codziennie</string>
    <string name="repeat_week_rb">Co tydzień</string>
    <string name="chose_day_text">Dzień:</string>
    <string name="writing_expression">Wpisz zwrot</string>
    <string name="my_expressions_list">Moja lista zwrotów</string>
    <string name="categorys_text">Kategorie zwrotów:</string>
    <string name="search_hint">Wyszukaj kategorię lub zwrot </string>
    <string name="choose_category_list">Wybierz kategorię</string>
    <string name="choose_language">Wybierz język</string>

</resources>