<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res/com.doyouspeak"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_por"
    android:orientation="vertical" 
    >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        app:title="@string/app_name" 
        />

    <TextView
        android:id="@+id/choseDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:layout_marginTop="15dip"
        android:text="@string/chose_day_text"
        android:textColor="@color/font_color" 
        android:layout_centerVertical="false" 
        android:layout_centerHorizontal="true" 
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <LinearLayout
        android:id="@+id/choseDayButtons"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingLeft="15dip"
        android:paddingTop="5.0dip"
        android:paddingRight="15dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/choseDay"
        >
        
	    <Button
	        android:id="@+id/dateButton"
	        style="@style/button"
	        android:layout_width="0.0dip" 
	        android:layout_height="wrap_content"
	        android:text="@string/date_setter_text" 
	        android:layout_weight="1.0" 
	        android:padding="5dip" 
	        android:layout_margin="10dip" 
	        android:gravity="center_horizontal" 
	        android:textColor="@color/white"
	        android:onClick="showDatePickerDialog"
	        />
	
	    <Button
	        android:id="@+id/timeButton"
	        style="@style/button"
	        android:layout_width="0.0dip" 
	        android:layout_height="wrap_content"
	        android:text="@string/time_setter_text" 
	        android:layout_weight="1.0" 
	        android:padding="5dip" 
	        android:layout_margin="10dip" 
	        android:gravity="center_horizontal" 
	        android:textColor="@color/white"
	        android:onClick="showTimePickerDialog"
	        />
	    
    </LinearLayout>

    <TextView
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choseDayButtons"
        android:text="@string/repeat_text"
        android:textColor="@color/font_color" 
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="15dip" 
        android:textStyle="bold"
        />

    <RadioGroup
        android:id="@+id/repeatGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeat"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" android:paddingLeft="20dip" android:paddingRight="20dip">

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_once_rb"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/font_color" />

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/repeat_day_rb"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/font_color" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_week_rb"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/font_color" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/confirmButtons"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingLeft="15dip"
        android:paddingTop="5.0dip"
        android:paddingRight="15dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeatGroup"
        >
        
        <Button
        	android:id="@+id/setButton"
        	style="@style/button"
	        android:layout_width="0.0dip" 
	        android:layout_height="wrap_content"
	        android:text="@string/setting_buttun_text" 
	        android:layout_weight="1.0" 
	        android:padding="5dip" 
	        android:layout_margin="10dip" 
	        android:gravity="center_horizontal"
	        android:textColor="@color/white"/>
        
	    <Button
	        android:id="@+id/cancelButton"
	        style="@style/button"
	        android:layout_width="0.0dip" 
	        android:layout_height="wrap_content"
	        android:text="@string/cancel_button_text" 
	        android:layout_weight="1.0" 
	        android:padding="5dip" 
	        android:layout_margin="10dip" 
	        android:gravity="center_horizontal"
	        android:textColor="@color/white"/>
	    
    </LinearLayout>

</RelativeLayout>