<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.doyouspeak"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_por"
    android:orientation="vertical" 
    android:visibility="visible" 
    android:clickable="true"
    >

    <include layout="@layout/actionbar" />

    <Button
        android:id="@+id/my_localization"
        style="@style/button"
        android:layout_below="@+id/actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/my_localization" 
        android:padding="4dp"
        android:textColor="@color/white"
        android:clickable="true"/>

    <TextView
        android:id="@+id/choose_localization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:text="@string/choose_localization"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/font_color"
        />
    
    <AutoCompleteTextView
        android:id="@+id/writing_localization"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choose_localization"
        android:layout_alignRight="@+id/choose_localization"
        android:layout_below="@+id/choose_localization"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/writing_localization"
        android:textColor="@color/font_color"
        android:visibility="visible" 
        />

    <TextView
        android:id="@+id/your_localization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choose_localization"
        android:layout_alignRight="@+id/choose_localization"
        android:layout_below="@+id/choose_localization"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/your_localization"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/action_bar_color"
        android:visibility="invisible"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/choose_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/writing_localization"
        android:layout_alignRight="@+id/writing_localization"
        android:layout_below="@+id/writing_localization"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:popupBackground="@color/background_color"
        android:visibility="visible"
        android:prompt="@string/choose_languages" 
        />

</RelativeLayout>