<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.doyouspeak"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_por"
    android:orientation="vertical" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        app:title="@string/app_name" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res/com.doyouspeak"
        android:id="@+id/expressionBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="5.0dip" >

        <ToggleButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:drawableBottom="@drawable/favorite_button"
            android:gravity="center"
            android:textOff="@string/star_off"
            android:textOn="@string/star_on" />

        <TextView
            android:id="@+id/expression"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/favorite"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/favoriteButton"
            android:paddingLeft="30dp"
            android:text="@string/expression_text"
            android:textColor="@color/font_color"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/functionsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/expressionBox"
        android:layout_toLeftOf="@+id/next_img" 
        android:layout_toRightOf="@+id/previous_img"
        >

        <TextView
            android:id="@+id/listen_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/favoriteButton"
            android:layout_marginTop="60dp"
            android:paddingLeft="15dp"
            android:text="@string/listen_text"
            android:textColor="@color/font_color"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/listenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/listen_text"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play" />

        <TextView
            android:id="@+id/record_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/listenButton"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:text="@string/record_text"
            android:textColor="@color/font_color"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/record_text"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/listenButton"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_record" />

        <TextView
            android:id="@+id/record_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/record_text"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:text="@string/record_history_text"
            android:textColor="@color/font_color"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/historyButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/record_history_text"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/historyButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/historyButton1"
            android:layout_toRightOf="@+id/historyButton1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/historyButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/historyButton2"
            android:layout_toRightOf="@+id/historyButton2"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/next_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/next_text"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_next"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/previous_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/previous_text"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_previous"
        android:visibility="visible" />

</RelativeLayout>